# USB2CAN_motor

./: README.md  SOUl .md  todo.md
.agent/: REMOTE_CONTROL_README.md  TEST_STATUS.md  USB2CAN 电机控制系统.md  unitree_8010.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: codeql.yml  pr-ci.yml
docs/: ROS2_realtime_control_analysis.md  delta_arm_manager数据流.md  plan.md  pr_governance.md  serial_timing_bottleneck_analysis.md
install/motor_control_ros2/include/motor_control_ros2/: config_parser.hpp  config_parser.hpp~HEAD  damiao_motor.hpp  dji_motor.hpp  motor_base.hpp  unitree_motor.hpp  unitree_motor.hpp~HEAD
install/motor_control_ros2/include/motor_control_ros2/hardware/: can_interface.hpp  can_interface.hpp~HEAD  hardware_manager.hpp  serial_interface.hpp  serial_interface.hpp~HEAD
install/motor_control_ros2/include/motor_control_ros2/motor_control_ros2/msg/: control_frequency.h  control_frequency.hpp  damiao_motor_command.h  damiao_motor_command.hpp  damiao_motor_state.h  damiao_motor_state.hpp  dji_motor_command.h  dji_motor_command.hpp  dji_motor_state.h  dji_motor_state.hpp  motor_state_generic.h  motor_state_generic.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  unitree_go8010_command.h  unitree_go8010_command.hpp  unitree_go8010_state.h  unitree_go8010_state.hpp  unitree_motor_command.h  unitree_motor_command.hpp  unitree_motor_state.h  unitree_motor_state.hpp
install/motor_control_ros2/include/motor_control_ros2/motor_control_ros2/msg/detail/: control_frequency__builder.hpp  control_frequency__functions.h  control_frequency__rosidl_typesupport_fastrtps_c.h  control_frequency__rosidl_typesupport_fastrtps_cpp.hpp  control_frequency__rosidl_typesupport_introspection_c.h  control_frequency__rosidl_typesupport_introspection_cpp.hpp  control_frequency__struct.h  control_frequency__struct.hpp  control_frequency__traits.hpp  control_frequency__type_support.h  control_frequency__type_support.hpp  damiao_motor_command__builder.hpp  damiao_motor_command__functions.h  damiao_motor_command__rosidl_typesupport_fastrtps_c.h  damiao_motor_command__rosidl_typesupport_fastrtps_cpp.hpp  damiao_motor_command__rosidl_typesupport_introspection_c.h  damiao_motor_command__rosidl_typesupport_introspection_cpp.hpp  damiao_motor_command__struct.h  damiao_motor_command__struct.hpp  damiao_motor_command__traits.hpp  damiao_motor_command__type_support.h  damiao_motor_command__type_support.hpp  damiao_motor_state__builder.hpp  damiao_motor_state__functions.h  damiao_motor_state__rosidl_typesupport_fastrtps_c.h  damiao_motor_state__struct.h  (+88 more)
install/motor_control_ros2/lib/: libmotor_control_lib.so~HEAD
install/motor_control_ros2/lib/motor_control_ros2/: motor_control_node  motor_control_node~HEAD  motor_monitor_node  motor_monitor_node~HEAD
install/motor_control_ros2/share/ament_index/resource_index/package_run_dependencies/: motor_control_ros2  motor_control_ros2~HEAD
install/motor_control_ros2/share/ament_index/resource_index/parent_prefix_path/: motor_control_ros2  motor_control_ros2~HEAD
install/motor_control_ros2/share/ament_index/resource_index/rosidl_interfaces/: motor_control_ros2
install/motor_control_ros2/share/motor_control_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.sh~HEAD  local_setup.zsh  package.xml  package.xml~HEAD
install/motor_control_ros2/share/motor_control_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  motor_control_ros2Config-version.cmake  motor_control_ros2Config.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/motor_control_ros2/share/motor_control_ros2/config/: control_params.yaml  motors.yaml  motors.yaml~HEAD
install/motor_control_ros2/share/motor_control_ros2/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/motor_control_ros2/share/motor_control_ros2/msg/: ControlFrequency.idl  ControlFrequency.msg  DJIMotorCommand.idl  DJIMotorCommand.msg  DJIMotorState.idl  DJIMotorState.msg  DamiaoMotorCommand.idl  DamiaoMotorCommand.msg  DamiaoMotorState.idl  DamiaoMotorState.msg  MotorStateGeneric.idl  MotorStateGeneric.msg  UnitreeGO8010Command.idl  UnitreeGO8010Command.idl~HEAD  UnitreeGO8010Command.msg  UnitreeGO8010Command.msg~HEAD  UnitreeGO8010State.idl  UnitreeGO8010State.msg  UnitreeMotorCommand.idl  UnitreeMotorCommand.msg  UnitreeMotorState.idl  UnitreeMotorState.msg
python/src/: main.py
src/ROS_test/: calibrate_zero_position.py  can_monitor.py  main_simple.py  motor_controller.py  multi_motor_manager.py  record_motor_angles.py  ros_angle_updater.py  ros_target_publisher.py  start_chassis.sh  start_ros_system.sh  test_chassis_calibration.sh  test_gm3508_angle_wrap.sh  test_hardware.sh  test_hardware_refactored.sh  test_motor_rotate_py.py  test_pid_control.sh
src/motor_control_ros2/: CMakeLists.txt
src/motor_control_ros2/config/: arm_config.yaml  arm_params.yaml  joystick_params.yaml  joystick_strike_params.yaml  motors.yaml  omni_chassis_params.yaml  strike_system_params.yaml
src/motor_control_ros2/include/motor_control_ros2/: arm_control_node.hpp  delta_arm_manager_node.hpp  joystick_strike_control_node.hpp
src/motor_control_ros2/msg/: ArmJointCommand.msg  ArmState.msg  ArmTarget.msg
src/motor_control_ros2/src/: arm_control_node.cpp  delta_arm_manager_node.cpp  joystick_strike_control_node.cpp  motor_control_node.cpp  motor_monitor_node.cpp
src/motor_control_ros2/src/hardware/: serial_interface.cpp
